--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<spring-security>4.0.3.RELEASE</spring-security>
+		<spring>4.2.3.RELEASE</spring>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,7 +56,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>4.2.3.RELEASE</version>
+			<version>${spring}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring}</version>
 		</dependency>
 	</dependencies>
 	<build>
